[package]
name = "libautomotive"
version = "0.1.0"
edition = "2021"
description = "A Rust library for automotive systems and protocols"
authors = ["Shishir Dey <r0qck3ntp@mozmail.com>"]
license = "MIT"
repository = "https://github.com/shishir-dey/libautomotive"
homepage = "https://github.com/shishir-dey/libautomotive"
documentation = "https://github.com/shishir-dey/libautomotive"
readme = "README.md"
keywords = ["rust", "can", "automotive", "obd2", "j1939"]
categories = ["embedded", "hardware-support", "network-programming"]

[dependencies]
bitflags = "2.4.2"

[features]
default = []
mock = []  # Feature for enabling mock implementations

[dev-dependencies]
# Add any development dependencies here
